// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HistorySetWrapper should render correctly 1`] = `
LoadedCheerio {
  "0": <div>
    test
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`NoMatch should render correctly 1`] = `
LoadedCheerio {
  "0": <div
    style="position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; z-index: 1;"
  >
    <div
      style="color: rgba(0, 0, 0, 0.549); font-size: 14px; text-align: center; line-height: 20px; white-space: nowrap; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);"
    >
      <img
        src="https://lf3-fe.ecombdstatic.com/obj/ecom-open-butler/mona/error.png"
        style="width: 320px; margin-bottom: 8px;"
      />
      <div>
        <span>
          不存在路由 blank 
          <a>
            返回首页
          </a>
        </span>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`WrapperComponent should render correctly 1`] = `
LoadedCheerio {
  "0": <div>
    test
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
